--- a/css/normalize.css
+++ b/css/normalize.css
@@ -26,7 +26,7 @@ body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,p,
 
 body {
   min-width: 600px;
-  background-color: #fff;
+  background-color: #000919;
   transition: all .5s ease-in-out;
 }
 
