--- a/css/normalize.css
+++ b/css/normalize.css
@@ -27,7 +27,7 @@ body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,p,
 body {
   min-width: 600px;
   background-color: #010818;
-  transition: all .5s ease-in-out;
+  overflow-x: hidden;
 }
 
 ol,ul,li {
