--- a/css/place.css
+++ b/css/place.css
@@ -12,7 +12,10 @@
 .topBox {
   position: relative;
   width: 100%;
-  background: url(../img/index-bg-2.jpg) no-repeat center;
+}
+
+.placeTop {
+  background: url(../img/place-bg.jpg) no-repeat center;
   background-size: cover;
 }
 
@@ -29,7 +32,6 @@
 
 .topBox header .logo {
   width: 13rem;
-  transition: all .3s ease-in-out;
 }
 
 @media only screen and (max-width: 1440px) {
@@ -46,10 +48,13 @@
   display: block;
   float: left;
   margin: 0 .83rem;
-  line-height: 29px;
+  line-height: 30px;
   font-size: 1.17rem;
   color: #fff;
   text-decoration: none;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
   transition: all .3s ease-in-out;
 }
 
@@ -65,6 +70,9 @@
   height: 2px;
   margin-left: 50%;
   background-color: #fbd34b;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
   transition: all .3s ease-in-out;
 }
 
@@ -84,37 +92,11 @@
 }
 
 .topBox header nav span {
-  z-index: 999;
   display: inline-block;
-  margin: 0 .83rem;
-  background-image: url(../img/nav-icon.png);
-  background-repeat: no-repeat;
-  vertical-align: middle;
-  cursor: pointer;
-}
-
-.topBox header nav span.call {
-  background-position: 0 0;
-  width: 25px;
-  height: 25px;
-}
-
-.topBox header nav span.wechat {
-  background-position: 0 -35px;
-  width: 30px;
-  height: 24px;
-}
-
-.topBox header nav span.qq {
-  background-position: 0 -66px;
-  width: 22px;
-  height: 29px;
-}
-
-.topBox header nav span div.dropdown {
-  z-index: 98;
-  padding: 10px;
-  background-color: red;
+  margin-left: 1.66rem;
+  font-size: 18px;
+  line-height: 30px;
+  color: #fff;
 }
 
 
@@ -132,6 +114,9 @@
 
 .topBox .slogan .sloganPic {
   width: 34.5rem;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
   transition: all .3s ease-in-out;
 }
 
@@ -146,6 +131,9 @@
   height: 0.83rem;
   margin-top: 10%;
   background-color: #fbd34b;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
   transition: all .3s ease-in-out;
 }
 
@@ -177,6 +165,9 @@
   position: absolute;
   z-index: 10;
   width: 15.1rem;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
   transition: all .3s ease-in-out;
   -webkit-animation: flyRightAnimate 1.5s ease-in-out 1;
   -moz-animation: flyRightAnimate 1.5s ease-in-out 1;
@@ -192,6 +183,9 @@
   width: 45.6rem;
   height: 31.08rem;
   overflow: hidden;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
   transition: all .3s ease-in-out;
   -webkit-animation: flyRightAnimate 2s ease-in-out 1;
   -moz-animation: flyRightAnimate 2s ease-in-out 1;
@@ -254,6 +248,9 @@
   width: 45.6rem;
   height: 28.25rem;
   background-color: #010818;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
   transition: all .3s ease-in-out;
   -webkit-animation: flyRightAnimate 2s ease-in-out 1;
   -moz-animation: flyRightAnimate 2s ease-in-out 1;
@@ -318,6 +315,9 @@
   text-indent: 10px;
   color: #fff;
   cursor: pointer;
+  -webkit-transition: all .1s ease-in-out;
+  -moz-transition: all .1s ease-in-out;
+  -o-transition: all .1s ease-in-out;
   transition: all .1s ease-in-out;
 }
 
@@ -331,7 +331,14 @@
   height: 0;
   border: 6px solid transparent;
   border-left-color: #fff;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
   transform: translateY(-50%);
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
   transition: all .3s ease-in-out;
 }
 
@@ -344,6 +351,9 @@
   width: 0;
   height: 32px;
   background-color: #fbd34b;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
   transition: all .3s ease-in-out;
 }
 
@@ -404,6 +414,10 @@
   position: absolute;
   bottom: 5%;
   left: 50%;
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
   transform: translateX(-50%);
   color: #fff;
 }
@@ -417,6 +431,10 @@
   height: 0;
   border: 6px solid transparent;
   border-top-color: #fff;
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
   transform: translateX(-50%);
   -webkit-animation: scrollDown 1s linear 3s infinite;
   -moz-animation: scrollDown 1s linear 3s infinite;
@@ -495,6 +513,10 @@
   position: relative;
   float: left;
   width: 10%;
+  -webkit-transform: translateX(-500px);
+  -moz-transform: translateX(-500px);
+  -ms-transform: translateX(-500px);
+  -o-transform: translateX(-500px);
   transform: translateX(-500px);
 }
 
@@ -538,6 +560,10 @@
 .typeList .colList {
   float: right;
   width: 90%;
+  -webkit-transform: translateX(2000px);
+  -moz-transform: translateX(2000px);
+  -ms-transform: translateX(2000px);
+  -o-transform: translateX(2000px);
   transform: translateX(2000px);
 }
 
@@ -645,6 +671,9 @@
   color: #fff;
   text-align: center;
   cursor: pointer;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
   transition: all .3s ease-in-out;
 }
 
@@ -662,7 +691,7 @@
 
 footer .footerPic {
   width: 100%;
-  height: 10rem;
+  height: 12rem;
   background: url(../img/footer-pic.jpg) no-repeat center;
   background-size: cover;
 }
@@ -690,6 +719,9 @@ footer .info .info-nr nav a {
   font-size: 1rem;
   color: #d0dae4;
   text-decoration: none;
+  -webkit-transition: all .2s ease-in-out;
+  -moz-transition: all .2s ease-in-out;
+  -o-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
 }
 
@@ -708,6 +740,192 @@ footer .info .info-nr p {
 
 /*
 ===========
+回到顶部
+===========
+*/
+
+.stick {
+  position: fixed;
+  right: 0;
+  bottom: 80px;
+  width: 4.2rem;
+  z-index: 999;
+}
+
+.stick li {
+  float: right;
+  position: relative;
+  width: 4.2rem;
+  height: 4rem;
+  margin-top: 5px;
+  background-color: #fbd34b;
+  border-radius: 4px 0 0 3px;
+  line-height: 4rem;
+  font-size: 14px;
+  text-align: center;
+  color: #fff;
+  cursor: pointer;
+  -webkit-transition: all .2s ease-in-out;
+  -moz-transition: all .2s ease-in-out;
+  -o-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+}
+
+.stick .wechat {
+  padding: 40px 0 10px;
+  background-image: url(../img/nav-icon.png);
+  background-position: 10px 11px;
+  background-repeat: no-repeat;
+  line-height: 1.3;
+  color: #fff;
+}
+
+.stick .wechat:hover {
+  background-position: -102px 11px;
+  color: #00233d;
+}
+
+.stick .backtop {
+  display: none;
+}
+
+.stick .backtop:hover {
+  color: #00233d;
+}
+
+.erweima {
+  display: none;
+  position: fixed;
+  right: 5.5rem;
+  z-index: 999;
+  width: 12rem;
+  height: 12rem;
+  padding: 1rem;
+  background-color: #fff;
+  -webkit-animation: wechatPic .5s ease-in-out 1;
+  -moz-animation: wechatPic .5s ease-in-out 1;
+  -o-animation: wechatPic .5s ease-in-out 1;
+  animation: wechatPic .5s ease-in-out 1;
+}
+
+.erweima:after {
+  position: absolute;
+  right: -12px;
+  top: 50%;
+  content: "";
+  width: 0;
+  height: 0;
+  border: 6px solid transparent;
+  border-left-color: #fff;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+.erweima img {
+  width: 100%;
+}
+
+@-webkit-keyframes wechatPic {
+  0% {
+    -webkit-transform: translateX(-30px);
+    -moz-transform: translateX(-30px);
+    -ms-transform: translateX(-30px);
+    -o-transform: translateX(-30px);
+    transform: translateX(-30px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    -moz-transform: translateX(0);
+    -ms-transform: translateX(0);
+    -o-transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@-moz-keyframes wechatPic {
+  0% {
+    -webkit-transform: translateX(-30px);
+    -moz-transform: translateX(-30px);
+    -ms-transform: translateX(-30px);
+    -o-transform: translateX(-30px);
+    transform: translateX(-30px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    -moz-transform: translateX(0);
+    -ms-transform: translateX(0);
+    -o-transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@-ms-keyframes wechatPic {
+  0% {
+    -webkit-transform: translateX(-30px);
+    -moz-transform: translateX(-30px);
+    -ms-transform: translateX(-30px);
+    -o-transform: translateX(-30px);
+    transform: translateX(-30px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    -moz-transform: translateX(0);
+    -ms-transform: translateX(0);
+    -o-transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@-o-keyframes wechatPic {
+  0% {
+    -webkit-transform: translateX(-30px);
+    -moz-transform: translateX(-30px);
+    -ms-transform: translateX(-30px);
+    -o-transform: translateX(-30px);
+    transform: translateX(-30px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    -moz-transform: translateX(0);
+    -ms-transform: translateX(0);
+    -o-transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes wechatPic {
+  0% {
+    -webkit-transform: translateX(-30px);
+    -moz-transform: translateX(-30px);
+    -ms-transform: translateX(-30px);
+    -o-transform: translateX(-30px);
+    transform: translateX(-30px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    -moz-transform: translateX(0);
+    -ms-transform: translateX(0);
+    -o-transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+
+/*
+===========
 元素飞入动画
 ===========
 */
@@ -717,10 +935,18 @@ footer .info .info-nr p {
 
 @-webkit-keyframes flyLeftAnimate {
   0% {
+    -webkit-transform: translateX(-2000px);
+    -moz-transform: translateX(-2000px);
+    -ms-transform: translateX(-2000px);
+    -o-transform: translateX(-2000px);
     transform: translateX(-2000px);
     opacity: 0;
   }
   100% {
+    -webkit-transform: translateX(0);
+    -moz-transform: translateX(0);
+    -ms-transform: translateX(0);
+    -o-transform: translateX(0);
     transform: translateX(0);
     opacity: 1;
   }
@@ -728,10 +954,37 @@ footer .info .info-nr p {
 
 @-moz-keyframes flyLeftAnimate {
   0% {
+    -webkit-transform: translateX(-2000px);
+    -moz-transform: translateX(-2000px);
+    -ms-transform: translateX(-2000px);
+    -o-transform: translateX(-2000px);
     transform: translateX(-2000px);
     opacity: 0;
   }
   100% {
+    -webkit-transform: translateX(0);
+    -moz-transform: translateX(0);
+    -ms-transform: translateX(0);
+    -o-transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@-ms-keyframes flyLeftAnimate {
+  0% {
+    -webkit-transform: translateX(-2000px);
+    -moz-transform: translateX(-2000px);
+    -ms-transform: translateX(-2000px);
+    -o-transform: translateX(-2000px);
+    transform: translateX(-2000px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    -moz-transform: translateX(0);
+    -ms-transform: translateX(0);
+    -o-transform: translateX(0);
     transform: translateX(0);
     opacity: 1;
   }
@@ -739,10 +992,18 @@ footer .info .info-nr p {
 
 @-o-keyframes flyLeftAnimate {
   0% {
+    -webkit-transform: translateX(-2000px);
+    -moz-transform: translateX(-2000px);
+    -ms-transform: translateX(-2000px);
+    -o-transform: translateX(-2000px);
     transform: translateX(-2000px);
     opacity: 0;
   }
   100% {
+    -webkit-transform: translateX(0);
+    -moz-transform: translateX(0);
+    -ms-transform: translateX(0);
+    -o-transform: translateX(0);
     transform: translateX(0);
     opacity: 1;
   }
@@ -750,10 +1011,18 @@ footer .info .info-nr p {
 
 @keyframes flyLeftAnimate {
   0% {
+    -webkit-transform: translateX(-2000px);
+    -moz-transform: translateX(-2000px);
+    -ms-transform: translateX(-2000px);
+    -o-transform: translateX(-2000px);
     transform: translateX(-2000px);
     opacity: 0;
   }
   100% {
+    -webkit-transform: translateX(0);
+    -moz-transform: translateX(0);
+    -ms-transform: translateX(0);
+    -o-transform: translateX(0);
     transform: translateX(0);
     opacity: 1;
   }
@@ -764,10 +1033,18 @@ footer .info .info-nr p {
 
 @-webkit-keyframes flyRightAnimate {
   0% {
+    -webkit-transform: translateX(2000px);
+    -moz-transform: translateX(2000px);
+    -ms-transform: translateX(2000px);
+    -o-transform: translateX(2000px);
     transform: translateX(2000px);
     opacity: 0;
   }
   100% {
+    -webkit-transform: translateX(0);
+    -moz-transform: translateX(0);
+    -ms-transform: translateX(0);
+    -o-transform: translateX(0);
     transform: translateX(0);
     opacity: 1;
   }
@@ -775,10 +1052,18 @@ footer .info .info-nr p {
 
 @-moz-keyframes flyRightAnimate {
   0% {
+    -webkit-transform: translateX(2000px);
+    -moz-transform: translateX(2000px);
+    -ms-transform: translateX(2000px);
+    -o-transform: translateX(2000px);
     transform: translateX(2000px);
     opacity: 0;
   }
   100% {
+    -webkit-transform: translateX(0);
+    -moz-transform: translateX(0);
+    -ms-transform: translateX(0);
+    -o-transform: translateX(0);
     transform: translateX(0);
     opacity: 1;
   }
@@ -786,10 +1071,18 @@ footer .info .info-nr p {
 
 @-ms-keyframes flyRightAnimate {
   0% {
+    -webkit-transform: translateX(2000px);
+    -moz-transform: translateX(2000px);
+    -ms-transform: translateX(2000px);
+    -o-transform: translateX(2000px);
     transform: translateX(2000px);
     opacity: 0;
   }
   100% {
+    -webkit-transform: translateX(0);
+    -moz-transform: translateX(0);
+    -ms-transform: translateX(0);
+    -o-transform: translateX(0);
     transform: translateX(0);
     opacity: 1;
   }
@@ -797,10 +1090,18 @@ footer .info .info-nr p {
 
 @-o-keyframes flyRightAnimate {
   0% {
+    -webkit-transform: translateX(2000px);
+    -moz-transform: translateX(2000px);
+    -ms-transform: translateX(2000px);
+    -o-transform: translateX(2000px);
     transform: translateX(2000px);
     opacity: 0;
   }
   100% {
+    -webkit-transform: translateX(0);
+    -moz-transform: translateX(0);
+    -ms-transform: translateX(0);
+    -o-transform: translateX(0);
     transform: translateX(0);
     opacity: 1;
   }
@@ -808,10 +1109,18 @@ footer .info .info-nr p {
 
 @keyframes flyRightAnimate {
   0% {
+    -webkit-transform: translateX(2000px);
+    -moz-transform: translateX(2000px);
+    -ms-transform: translateX(2000px);
+    -o-transform: translateX(2000px);
     transform: translateX(2000px);
     opacity: 0;
   }
   100% {
+    -webkit-transform: translateX(0);
+    -moz-transform: translateX(0);
+    -ms-transform: translateX(0);
+    -o-transform: translateX(0);
     transform: translateX(0);
     opacity: 1;
   }
