--- a/css/index.css
+++ b/css/index.css
@@ -17,18 +17,18 @@
 }
 
 .fullpage-ad .slide-ad li {
+  display: none;
   width: 100%;
   height: 100%;
-  display: none;
 }
 
 .fullpage-ad .slide-ad li span.index-bg {
   position: absolute;
   left: 0;
   top: 0;
+  z-index: 0;
   width: 100%;
   height: 100%;
-  z-index: 0;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -48,22 +48,29 @@
 
 .fullpage-ad .ad-content {
   position: fixed;
+  z-index: 5;
   width: 100%;
   height: 100%;
-  z-index: 5;
   text-align: center;
 }
 
 .fullpage-ad .ad-content img.num1 {
   width: 100rem;
   margin-top: 17.5rem;
-  transition: all .3s ease-in-out;
+  -webkit-animation: flyDown 1s ease-in-out 1;
+  -moz-animation: flyDown 1s ease-in-out 1;
+  -o-animation: flyDown 1s ease-in-out 1;
+  animation: flyDown 1s ease-in-out 1;
 }
 
 .fullpage-ad .ad-content img.num2 {
   width: 54.5rem;
   margin-top: 6rem;
-  transition: all .3s ease-in-out;
+  -webkit-animation: flyDown 1s ease-in-out .5s 1 forwards;
+  -moz-animation: flyDown 1s ease-in-out .5s 1 forwards;
+  -o-animation: flyDown 1s ease-in-out .5s 1 forwards;
+  animation: flyDown 1s ease-in-out .5s 1 forwards;
+  opacity: 0;
 }
 
 .fullpage-ad .ad-content span {
@@ -73,6 +80,11 @@
   margin: 0 auto;
   margin-top: 10.5rem;
   background-color: #fbd34b;
+  -webkit-animation: flyDown 1s ease-in-out .3s 1 forwards;
+  -moz-animation: flyDown 1s ease-in-out .3s 1 forwards;
+  -o-animation: flyDown 1s ease-in-out .3s 1 forwards;
+  animation: flyDown 1s ease-in-out .3s 1 forwards;
+  opacity: 0;
 }
 
 @media only screen and (max-width: 1440px) {
@@ -96,6 +108,10 @@
   z-index: 999;
   width: 40px;
   height: 79px;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
   transform: translateY(-50%);
   cursor: pointer;
 }
@@ -104,6 +120,9 @@
   left: 5%;
   background: url(../img/slideBtn-pic.png) no-repeat;
   background-position: top left;
+  -webkit-transition: all .2s ease-in-out;
+  -moz-transition: all .2s ease-in-out;
+  -o-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
 }
 
@@ -111,6 +130,9 @@
   right: 5%;
   background: url(../img/slideBtn-pic.png) no-repeat;
   background-position: right bottom;
+  -webkit-transition: all .2s ease-in-out;
+  -moz-transition: all .2s ease-in-out;
+  -o-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
 }
 
@@ -127,7 +149,11 @@
   left: 50%;
   bottom: 10%;
   z-index: 999;
-  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
+  transform: translateY(-50%);
 }
 
 .fullpage-ad .slidePoint li {
@@ -157,7 +183,6 @@ header .logo {
   left: 5%;
   z-index: 999;
   width: 13rem;
-  transition: all .3s ease-in-out;
 }
 
 @media only screen and (max-width: 1440px) {
@@ -177,10 +202,13 @@ header nav a {
   display: block;
   float: left;
   margin: 0 .83rem;
-  line-height: 29px;
+  line-height: 30px;
   font-size: 1.17rem;
   color: #fff;
   text-decoration: none;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
   transition: all .3s ease-in-out;
 }
 
@@ -196,6 +224,9 @@ header nav a:after {
   height: 2px;
   margin-left: 50%;
   background-color: #fbd34b;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
   transition: all .3s ease-in-out;
 }
 
@@ -215,37 +246,11 @@ header nav a.active {
 }
 
 header nav span {
-  z-index: 999;
   display: inline-block;
-  margin: 0 .83rem;
-  background-image: url(../img/nav-icon.png);
-  background-repeat: no-repeat;
-  vertical-align: middle;
-  cursor: pointer;
-}
-
-header nav span.call {
-  background-position: 0 0;
-  width: 25px;
-  height: 25px;
-}
-
-header nav span.wechat {
-  background-position: 0 -35px;
-  width: 30px;
-  height: 24px;
-}
-
-header nav span.qq {
-  background-position: 0 -66px;
-  width: 22px;
-  height: 29px;
-}
-
-header nav span div.dropdown {
-  z-index: 98;
-  padding: 10px;
-  background-color: red;
+  margin-left: 1.66rem;
+  font-size: 18px;
+  line-height: 30px;
+  color: #fff;
 }
 
 
@@ -269,6 +274,9 @@ footer nav a {
   font-size: 1rem;
   color: #d0dae4;
   text-decoration: none;
+  -webkit-transition: all .2s ease-in-out;
+  -moz-transition: all .2s ease-in-out;
+  -o-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
 }
 
@@ -283,4 +291,332 @@ footer p {
   font-family: Arial, "宋体";
   font-size: 1rem;
   color: #d0dae4;
+}
+
+
+/*
+===========
+回到顶部
+===========
+*/
+
+.stick {
+  position: fixed;
+  right: 0;
+  bottom: 80px;
+  width: 4.2rem;
+  z-index: 999;
+}
+
+.stick li {
+  float: right;
+  position: relative;
+  width: 4.2rem;
+  height: 4rem;
+  margin-top: 5px;
+  background-color: #fbd34b;
+  border-radius: 4px 0 0 3px;
+  line-height: 4rem;
+  font-size: 14px;
+  text-align: center;
+  color: #fff;
+  cursor: pointer;
+  -webkit-transition: all .2s ease-in-out;
+  -moz-transition: all .2s ease-in-out;
+  -o-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+}
+
+.stick .wechat {
+  padding: 40px 0 10px;
+  background-image: url(../img/nav-icon.png);
+  background-position: 10px 11px;
+  background-repeat: no-repeat;
+  line-height: 1.3;
+  color: #fff;
+}
+
+.stick .wechat:hover {
+  background-position: -102px 11px;
+  color: #00233d;
+}
+
+.stick .backtop {
+  display: none;
+}
+
+.stick .backtop:hover {
+  color: #00233d;
+}
+
+.erweima {
+  display: none;
+  position: fixed;
+  right: 5.5rem;
+  z-index: 999;
+  width: 12rem;
+  height: 12rem;
+  padding: 1rem;
+  background-color: #fff;
+  -webkit-animation: wechatPic .5s ease-in-out 1;
+  -moz-animation: wechatPic .5s ease-in-out 1;
+  -o-animation: wechatPic .5s ease-in-out 1;
+  animation: wechatPic .5s ease-in-out 1;
+}
+
+.erweima:after {
+  position: absolute;
+  right: -12px;
+  top: 50%;
+  content: "";
+  width: 0;
+  height: 0;
+  border: 6px solid transparent;
+  border-left-color: #fff;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+.erweima img {
+  width: 100%;
+}
+
+@-webkit-keyframes wechatPic {
+  0% {
+    -webkit-transform: translateX(-30px);
+    -moz-transform: translateX(-30px);
+    -ms-transform: translateX(-30px);
+    -o-transform: translateX(-30px);
+    transform: translateX(-30px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    -moz-transform: translateX(0);
+    -ms-transform: translateX(0);
+    -o-transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@-moz-keyframes wechatPic {
+  0% {
+    -webkit-transform: translateX(-30px);
+    -moz-transform: translateX(-30px);
+    -ms-transform: translateX(-30px);
+    -o-transform: translateX(-30px);
+    transform: translateX(-30px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    -moz-transform: translateX(0);
+    -ms-transform: translateX(0);
+    -o-transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@-ms-keyframes wechatPic {
+  0% {
+    -webkit-transform: translateX(-30px);
+    -moz-transform: translateX(-30px);
+    -ms-transform: translateX(-30px);
+    -o-transform: translateX(-30px);
+    transform: translateX(-30px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    -moz-transform: translateX(0);
+    -ms-transform: translateX(0);
+    -o-transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@-o-keyframes wechatPic {
+  0% {
+    -webkit-transform: translateX(-30px);
+    -moz-transform: translateX(-30px);
+    -ms-transform: translateX(-30px);
+    -o-transform: translateX(-30px);
+    transform: translateX(-30px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    -moz-transform: translateX(0);
+    -ms-transform: translateX(0);
+    -o-transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes wechatPic {
+  0% {
+    -webkit-transform: translateX(-30px);
+    -moz-transform: translateX(-30px);
+    -ms-transform: translateX(-30px);
+    -o-transform: translateX(-30px);
+    transform: translateX(-30px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    -moz-transform: translateX(0);
+    -ms-transform: translateX(0);
+    -o-transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+
+/*
+===========
+文字出现动画
+===========
+*/
+
+@-webkit-keyframes flyDown {
+  0% {
+    -webkit-transform: scale(0);
+    -moz-transform: scale(0);
+    -ms-transform: scale(0);
+    -o-transform: scale(0);
+    transform: scale(0);
+    opacity: 0;
+  }
+  90% {
+    -webkit-transform: scale(1.3);
+    -moz-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    -o-transform: scale(1.3);
+    transform: scale(1.3);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+@-moz-keyframes flyDown {
+  0% {
+    -webkit-transform: scale(0);
+    -moz-transform: scale(0);
+    -ms-transform: scale(0);
+    -o-transform: scale(0);
+    transform: scale(0);
+    opacity: 0;
+  }
+  90% {
+    -webkit-transform: scale(1.3);
+    -moz-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    -o-transform: scale(1.3);
+    transform: scale(1.3);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+@-ms-keyframes flyDown {
+  0% {
+    -webkit-transform: scale(0);
+    -moz-transform: scale(0);
+    -ms-transform: scale(0);
+    -o-transform: scale(0);
+    transform: scale(0);
+    opacity: 0;
+  }
+  90% {
+    -webkit-transform: scale(1.3);
+    -moz-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    -o-transform: scale(1.3);
+    transform: scale(1.3);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+@-o-keyframes flyDown {
+  0% {
+    -webkit-transform: scale(0);
+    -moz-transform: scale(0);
+    -ms-transform: scale(0);
+    -o-transform: scale(0);
+    transform: scale(0);
+    opacity: 0;
+  }
+  90% {
+    -webkit-transform: scale(1.3);
+    -moz-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    -o-transform: scale(1.3);
+    transform: scale(1.3);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+@keyframes flyDown {
+  0% {
+    -webkit-transform: scale(0);
+    -moz-transform: scale(0);
+    -ms-transform: scale(0);
+    -o-transform: scale(0);
+    transform: scale(0);
+    opacity: 0;
+  }
+  90% {
+    -webkit-transform: scale(1.3);
+    -moz-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    -o-transform: scale(1.3);
+    transform: scale(1.3);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+    opacity: 1;
+  }
 }
